--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <input type="button">
 
         </div>
-        <script src="Main2.js"></script>
+        <script src="main2.js"></script>
 </body>
 
 </html>
